force-app/main/default/objects/Beacon_Contact_Roles__c/Beacon_Contact_Roles__c.object-meta.xml
<CustomObject>
    <label>Beacon Contact Roles</label>
    <nameField>
        <displayFormat>BCR-{00000}</displayFormat>
        <label>Beacon Contact Roles Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Beacon Contact Roles</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>