force-app/main/default/objects/Beacon_Contact_Roles__c/fields/Beacon_Contact_Roles_del__c.field-meta.xml
<CustomField>
    <fullName>Beacon_Contact_Roles_del__c</fullName>
    <label>Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Beacon Contact Roles</relationshipLabel>
    <relationshipName>Beacon_Contact_Roles_del</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>