force-app/main/default/objects/Beacon_Contact_Roles__c/fields/Beacon_Contacts__c.field-meta.xml
<CustomField>
    <fullName>Beacon_Contacts__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Beacon Contacts</label>
    <referenceTo>Beacon_Contact__c</referenceTo>
    <relationshipLabel>Beacon Contact Roles</relationshipLabel>
    <relationshipName>Beacon_Contact_Roles</relationshipName>
    <type>Lookup</type>
</CustomField>