force-app/main/default/objects/Beacon_Contact_Roles__c/fields/Department__c.field-meta.xml
<CustomField>
    <fullName>Department__c</fullName>
    <formula>TEXT(Beacon_Contacts__r.Department__c)</formula>
    <label>Department</label>
    <type>Text</type>
</CustomField>