force-app/main/default/objects/Beacon_Contact_Roles__c/fields/Email__c.field-meta.xml
<CustomField>
    <fullName>Email__c</fullName>
    <formula>Beacon_Contacts__r.Email__c</formula>
    <label>Email</label>
    <type>Text</type>
</CustomField>