force-app/main/default/objects/Beacon_Contact_Roles__c/fields/First_Name__c.field-meta.xml
<CustomField>
    <fullName>First_Name__c</fullName>
    <formula>Beacon_Contacts__r.First_Name__c</formula>
    <label>First Name</label>
    <type>Text</type>
</CustomField>