force-app/main/default/objects/Beacon_Contact_Roles__c/fields/Last_Name__c.field-meta.xml
<CustomField>
    <fullName>Last_Name__c</fullName>
    <formula>Beacon_Contacts__r.Last_Name__c</formula>
    <label>Last Name</label>
    <type>Text</type>
</CustomField>