force-app/main/default/objects/Beacon_Contact_Roles__c/fields/Phone__c.field-meta.xml
<CustomField>
    <fullName>Phone__c</fullName>
    <formula>Beacon_Contacts__r.Phone__c</formula>
    <label>Phone</label>
    <type>Text</type>
</CustomField>